--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
            <p>У 2014 році на зміну Gallardo прийшов Huracán.</p>
         </main>
         <footer style="background-color:black">
-            <h4 style="color:white; text-align:center">Ярослав Слівінський<br>sl@gmail.com<br>2024</h4>
+            <h4 style="color:white; text-align:center">Ярослав Слівінський<br>slivinskijaroslav043@gmail.com<br>2024</h4>
         </footer>
     </body>
 </html>
